# agno-ai-agents-training

./: .gitignore  0.llm_call.py  1.1.researcher.py  1.2analyst.py  1.3_own_tools.py  1.4_analista.py  1.5analista.py  1.6analista.py  README.md  pyproject.toml
