[project]
name = "agno-ai-agents-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno==2.3.7",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "asttokens==3.0.1",
    "beautifulsoup4==4.14.3",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6",
    "comm==0.2.3",
    "curl-cffi==0.13.0",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "distro==1.9.0",
    "docstring-parser==0.17.0",
    "executing==2.2.1",
    "frozendict==2.4.7",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "groq==0.37.1",
    "h11==0.16.0",
    "h2==4.3.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "hyperframe==6.1.0",
    "idna==3.11",
    "ipykernel==7.1.0",
    "ipython==9.8.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.9.1",
    "markdown-it-py==4.0.0",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "multitasking==0.0.12",
    "nest-asyncio==1.6.0",
    "numpy==2.3.5",
    "packaging==25.0",
    "pandas==2.3.3",
    "parso==0.8.5",
    "peewee==3.18.3",
    "platformdirs==4.5.1",
    "prompt-toolkit==3.0.52",
    "protobuf==6.33.2",
    "psutil==7.1.3",
    "pure-eval==0.2.3",
    "pycparser==2.23",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "regex==2025.11.3",
    "requests==2.32.5",
    "rich==14.2.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "soupsieve==2.8",
    "stack-data==0.6.3",
    "tavily-python==0.7.14",
    "tiktoken==0.12.0",
    "tornado==6.5.2",
    "traitlets==5.14.3",
    "typer==0.20.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "urllib3==2.6.0",
    "wcwidth==0.2.14",
    "websockets==15.0.1",
    "yfinance==0.2.66"
]
